--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 
   </head>
   <body>
-      <script src="sketch.js"></script>
-  
 
-</body></html>
+    <script src="sketch.js"></script>
+<h2>
+    <b>
+        <ins>
+            Bouncy balls
+        </ins>
+    </b>  
+</h2>
+<p>
+    <b>1.</b> Bouncy balls is a game where balls bounce off the edges.  
+    <br>
+    <b>2.</b> You can click the balls for them to go in a random direction.   
+</p>
+</body>
+</html>
